# pipelines-components

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  Dockerfile  Dockerfile.konflux.automl  Dockerfile.konflux.autorag  Dockerfile.konflux.pipelines-components  Makefile  OWNERS  README.md  pyproject.toml
.github/: renovate.json
.github/actions/detect-changed-assets/: README.md  action.yml
.github/actions/list-all-assets/: action.yml
.github/actions/setup-python-ci/: action.yml
.github/scripts/: conftest.py
.github/scripts/check_imports/: import_exceptions.yaml
.github/scripts/ci_checks/: ci_checks.py
.github/scripts/ci_checks/tests/: test_ci_checks.py
.github/scripts/detect_changed_assets/: README.md  __init__.py  detect.py
.github/scripts/detect_changed_assets/tests/: __init__.py  test_detect.py
.github/scripts/utils/: find-changed-components-and-pipelines.sh
.github/scripts/validate_readmes/: test-readme-check.sh
.github/workflows/: add-ci-passed-label.yml  base-image-check.yml  build-packages.yml  ci-checks.yml  compile-and-deps.yml  component-pipeline-tests.yml  container-build.yml  gh-workflow-approve.yml  markdown-lint.yml  package-entries-check.yml  python-lint.yml  readme-check.yml  scripts-tests.yml  validate-metadata-schema.yml  yaml-lint.yml
.tekton/: README.md  odh-automl-on-pull-request.yaml  odh-automl-pull-request.yaml  odh-automl-v3-4-push.yaml  odh-autorag-on-pull-request.yaml  odh-pipelines-components-ci-on-pull-request.yaml  odh-pipelines-components-ci-on-push.yaml  odh-pipelines-components-on-pull-request.yaml  odh-pipelines-components-on-push.yaml  odh-pipelines-components-pull-request.yaml
components/data_processing/: README.md
components/data_processing/automl/: README.md
components/data_processing/automl/tabular_data_loader/: README.md  component.py  example_pipelines.py  metadata.yaml
components/data_processing/automl/tabular_train_test_split/: README.md
components/data_processing/automl/timeseries_data_loader/: README.md  __init__.py  component.py  example_pipelines.py  metadata.yaml
components/data_processing/autorag/documents_discovery/: README.md  component.py  example_pipelines.py
components/data_processing/dataset_download/: README.md
components/data_processing/sdg/: README.md  component.py  metadata.yaml
components/data_processing/yoda_data_processor/: README.md  component.py
components/deployment/: README.md
components/deployment/autorag/: README.md  __init__.py
components/deployment/kubeflow_model_registry/: README.md
components/evaluation/lm_eval/: README.md  component.py
components/training/: README.md
components/training/automl/: README.md  __init__.py
components/training/finetuning/: README.md  __init__.py  component.py  metadata.yaml
components/training/finetuning_algorithms/: README.md
components/training/osft/: OWNERS  README.md  __init__.py  component.py
components/training/sft/: README.md  component.py
components/training/shared/: ADDING_COMPONENTS.md  __init__.py  finetuning_utils.py
docs/: AGENTS.md  BESTPRACTICES.md  CONTRIBUTING.md  GOVERNANCE.md
docs/examples/: Containerfile  requirements.txt
pipelines/data_processing/: README.md
pipelines/data_processing/autorag/: README.md
pipelines/data_processing/sdg/: OWNERS  README.md  metadata.yaml  pipeline.py
pipelines/training/: README.md
pipelines/training/automl/: README.md
pipelines/training/autorag/: README.md  metadata.yaml
pipelines/training/finetuning/: README.md
pipelines/training/osft/: README.md  metadata.yaml  pipeline.py
pipelines/training/osft_minimal/: README.md
pipelines/training/sft/: README.md  metadata.yaml  pipeline.py
pipelines/training/sft_minimal/: README.md
scripts/check_base_image_tags/: check_base_image_tags.py
scripts/check_base_image_tags/tests/: test_check_base_image_tags.py
scripts/compile_check/: __init__.py  compile_check.py
scripts/compile_check/tests/: __init__.py  test_compile_check.py
scripts/generate_managed_pipelines/: README.md  generate_managed_pipelines.py
scripts/generate_managed_pipelines/tests/: test_generate_managed_pipelines.py  test_pipeline_description.py
scripts/generate_readme/: category_index_generator.py  cli.py  constants.py  content_generator.py  utils.py  writer.py
scripts/generate_readme/templates/: CATEGORY_README.md.j2  README.md.j2  SUBCATEGORY_README.md.j2
scripts/generate_readme/tests/: __init__.py  test_integration.py
scripts/generate_skeleton/: generate_skeleton.py
scripts/generate_skeleton/templates/: OWNERS.j2  __init__.py.j2  component.py.j2  pipeline.py.j2  test_local.py.j2  test_unit.py.j2
scripts/generate_skeleton/tests/: test_generate_skeleton.py
scripts/lib/: __init__.py  base_image.py  discovery.py  kfp_compilation.py  metadata_utils.py  oci.py  parsing.py
scripts/lib/tests/: __init__.py  test_discovery.py  test_kfp_compilation.py  test_metadata_utils.py  test_oci.py  test_parsing.py
scripts/list_all_assets/: README.md  list.py
scripts/override_base_images/: override_base_images.py
scripts/override_base_images/tests/: test_override_base_images.py
scripts/sync_packages/: sync_packages.py
scripts/sync_packages/tests/: test_sync_packages.py
scripts/tests/: run_component_tests.py
scripts/validate_base_images/: base_image_allowlist.yaml  validate_base_images.py
scripts/validate_base_images/tests/: test_validate_base_images.py
scripts/validate_components/: validate_components.py
scripts/validate_components/tests/: test_validate_components.py
scripts/validate_examples/: validate_examples.py
scripts/validate_metadata/: validate_metadata.py  validate_metadata_test.py
scripts/validate_package_entries/: validate_package_entries.py
scripts/validate_package_entries/tests/: test_validate_package_entries.py
test_data/: OWNERS
test_data/components/advanced/: README.md
test_data/components/grouped/: README.md
test_data/pipelines/grouped/: README.md
utils/: __init__.py  compiled_pipeline_alignment.py  consts.py  pipeline_dag_tasks.py
(+275 files in other folders)
