[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfp-components"
version = "1.11.0"
description = "A collection of reusable components and pipelines for Kubeflow Pipelines"
authors = [
    {name = "Kubeflow Community"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kfp>=2.15.2",
]

[project.optional-dependencies]
lint = [
    # We keep these pinned to avoid new lint failures due to updates
    "ruff==0.15.2",
    "yamllint==1.38.0",
]
test = [
    "docker",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "docstring-parser",
    "jinja2",
    "packaging",
    "pyyaml",
    "semver",
    "pip",
    "setuptools",
]
# Local development (extends test with additional tools)
dev = [
    "kfp-components[lint]",
    "kfp-components[test]",
]

[project.urls]
Homepage = "https://www.kubeflow.org/docs/components/pipelines/"
Documentation = "https://github.com/kubeflow/pipelines-components/tree/main/docs"
Repository = "https://github.com/kubeflow/pipelines-components"
Issues = "https://github.com/kubeflow/pipelines-components/issues"

[tool.setuptools]
packages = [
    "kfp_components",
    "kfp_components.components",
    "kfp_components.components.data_processing",
    "kfp_components.components.data_processing.dataset_download",
    "kfp_components.components.data_processing.yoda_data_processor",
    "kfp_components.components.deployment",
    "kfp_components.components.evaluation",
    "kfp_components.components.training",
    "kfp_components.pipelines",
    "kfp_components.pipelines.data_processing",
    "kfp_components.pipelines.deployment",
    "kfp_components.pipelines.evaluation",
    "kfp_components.pipelines.training",
]

[tool.setuptools.package-dir]
"kfp_components" = "."
"kfp_components.components" = "components"
"kfp_components.pipelines" = "pipelines"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "node_modules",
    "**/_generated/",
    "**/test_data/**",  # Test fixtures may have intentional styles (quote types, etc.)
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), isort (I), pydocstyle (D)
select = ["E", "W", "F", "I", "D"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D415",  # First line should end with punctuation (not needed for simple module names)
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["kubeflow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[project.scripts]
# Format is: script-name = "module.path:function_name"
my-script = "scripts.generate_readme.cli:main"


# Pytest configuration for KEP-913 repository structure
# Currently tests are in scripts/ only. When component/pipeline tests are added,
# this configuration will need to be updated to handle tests in components/*/tests/
[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Don't search these directories
norecursedirs = [".git", ".venv", "build", "dist", "__pycache__", "components", "pipelines"]
