[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfp-components"
version = "1.11.0"
description = "A collection of reusable components and pipelines for Kubeflow Pipelines"
authors = [{ name = "Kubeflow Community" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kfp>=2.15.2",
    "kfp-kubernetes>=2.15.2",
]

[project.optional-dependencies]
lint = [
    # We keep these pinned to avoid new lint failures due to updates
    "ruff==0.15.2",
    "yamllint==1.38.0",
]
test = [
    "docker",
    "docstring-parser",
    "jinja2",
    "packaging",
    "pip",
    "pyyaml",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "semver",
    "setuptools",
    # Component-specific SDK deps required for python_func() tests.
    # KFP SubprocessRunner cannot auto-install these because it does not
    # support Input[Dataset] artifacts (see: https://github.com/kubeflow/pipelines/issues/13061).
    # Once KFP fixes this, these can be removed and tests can use
    # SubprocessRunner(use_venv=True) instead.
    "sdg-hub>=0.7.0,<1.0",
    # Required for pipeline validation (validate_examples, validate_base_images)
    "kfp-kubernetes",
]
# Dependencies for AutoGluon pipeline integration tests (RHOAI + S3 + KFP)
test_automl = [
    "kfp-components[test]",
    "boto3",
    "kubernetes",
    "python-dotenv",
]
# Local development (extends test with additional tools)
dev = ["kfp-components[lint]", "kfp-components[test]"]


[project.urls]
Homepage = "https://www.kubeflow.org/docs/components/pipelines/"
Documentation = "https://github.com/kubeflow/pipelines-components/tree/main/docs"
Repository = "https://github.com/kubeflow/pipelines-components"
Issues = "https://github.com/kubeflow/pipelines-components/issues"

[tool.setuptools]
packages = [
    "kfp_components",
    "kfp_components.components",
    "kfp_components.components.data_processing",
    "kfp_components.components.data_processing.automl",
    "kfp_components.components.data_processing.automl.tabular_data_loader",
    "kfp_components.components.data_processing.automl.timeseries_data_loader",
    "kfp_components.components.data_processing.autorag",
    "kfp_components.components.data_processing.autorag.documents_discovery",
    "kfp_components.components.data_processing.autorag.documents_indexing",
    "kfp_components.components.data_processing.autorag.test_data_loader",
    "kfp_components.components.data_processing.autorag.text_extraction",
    "kfp_components.components.data_processing.dataset_download",
    "kfp_components.components.data_processing.yoda_data_processor",
    "kfp_components.components.data_processing.sdg",
    "kfp_components.components.deployment",
    "kfp_components.components.deployment.autorag",
    "kfp_components.components.deployment.autorag.build_responses_request_bodies",
    "kfp_components.components.deployment.kubeflow_model_registry",
    "kfp_components.components.evaluation",
    "kfp_components.components.evaluation.lm_eval",
    "kfp_components.components.training",
    "kfp_components.components.training.automl",
    "kfp_components.components.training.automl.autogluon_leaderboard_evaluation",
    "kfp_components.components.training.automl.autogluon_models_training",
    "kfp_components.components.training.automl.autogluon_timeseries_leaderboard_evaluation",
    "kfp_components.components.training.automl.autogluon_timeseries_models_full_refit",
    "kfp_components.components.training.automl.autogluon_timeseries_models_selection",
    "kfp_components.components.training.automl.shared",
    "kfp_components.components.training.autorag",
    "kfp_components.components.training.autorag.leaderboard_evaluation",
    "kfp_components.components.training.autorag.rag_templates_optimization",
    "kfp_components.components.training.autorag.search_space_preparation",
    "kfp_components.components.training.finetuning",
    "kfp_components.components.training.finetuning.lora",
    "kfp_components.components.training.finetuning.osft",
    "kfp_components.components.training.finetuning.sft",
    "kfp_components.components.training.finetuning.shared",
    "kfp_components.pipelines",
    "kfp_components.pipelines.data_processing",
    "kfp_components.pipelines.data_processing.autorag",
    "kfp_components.pipelines.data_processing.autorag.documents_indexing_pipeline",
    "kfp_components.pipelines.data_processing.sdg",
    "kfp_components.pipelines.deployment",
    "kfp_components.pipelines.evaluation",
    "kfp_components.pipelines.training",
    "kfp_components.pipelines.training.automl",
    "kfp_components.pipelines.training.automl.autogluon_tabular_training_pipeline",
    "kfp_components.pipelines.training.automl.autogluon_timeseries_training_pipeline",
    "kfp_components.pipelines.training.autorag",
    "kfp_components.pipelines.training.autorag.documents_rag_optimization_pipeline",
    "kfp_components.pipelines.training.finetuning",
    "kfp_components.pipelines.training.finetuning.lora",
    "kfp_components.pipelines.training.finetuning.lora_minimal",
    "kfp_components.pipelines.training.finetuning.osft",
    "kfp_components.pipelines.training.finetuning.osft_minimal",
    "kfp_components.pipelines.training.finetuning.sft",
    "kfp_components.pipelines.training.finetuning.sft_minimal",
]

[tool.setuptools.package-dir]
"kfp_components" = "."
"kfp_components.utils" = "utils"
"kfp_components.components" = "components"
"kfp_components.pipelines" = "pipelines"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]
"kfp_components.components.training.automl.autogluon_models_training" = ["notebook_templates/*.ipynb"]
"kfp_components.components.training.automl.autogluon_timeseries_models_full_refit" = ["notebook_templates/*.ipynb"]
"kfp_components.components.training.automl.shared" = ["*.html"]
"kfp_components.components.training.autorag.rag_templates_optimization" = ["notebook_templates/*.ipynb"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "node_modules",
    "**/_generated/",
    "**/test_data/**",  # Test fixtures may have intentional styles (quote types, etc.)
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), isort (I), pydocstyle (D)
select = ["E", "W", "F", "I", "D"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D415", # First line should end with punctuation (not needed for simple module names)
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["kubeflow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[project.scripts]
# Format is: script-name = "module.path:function_name"
my-script = "scripts.generate_readme.cli:main"


# Pytest configuration for KEP-913 repository structure
# Currently tests are in scripts/ only. When component/pipeline tests are added,
# this configuration will need to be updated to handle tests in components/*/tests/
[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks test as integration/functional/e2e (requires RHOAI cluster and .env config).",
]
# Don't search these directories
norecursedirs = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "components",
    "pipelines",
]
